--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserify-shim": "^3.8.14",
     "deepcopy": "^0.6.3",
     "exposify": "^0.5.0",
+    "geojson-bbox": "0.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-git": "^2.5.2",
