--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "geojson-bbox": "0.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-decompress": "^2.0.2",
     "gulp-git": "^2.5.2",
     "gulp-notify": "^3.0.0",
     "gulp-ruby-sass": "^2.1.1",
