--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "csv-parse": "^1.2.0",
     "d3": "^4.8.0",
     "fs": "0.0.1-security",
+    "geojson-bbox": "0.0.0",
     "jquery": "^1.12.4",
     "localforage": "^1.7.1",
+    "pako": "^1.0.6",
     "promise-polyfill": "^7.1.2",
-    "stringify": "^5.1.0"
+    "stringify": "^5.1.0",
+    "svg-path-bounds": "^1.0.1"
   },
   "devDependencies": {
     "brfs": "^1.4.3",
@@ -19,7 +22,6 @@
     "browserify-shim": "^3.8.14",
     "deepcopy": "^0.6.3",
     "exposify": "^0.5.0",
-    "geojson-bbox": "0.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-decompress": "^2.0.2",
