--- a/gridConfig.json
+++ b/gridConfig.json
@@ -1,23 +1,19 @@
 {
   "low": {
-    "quantize":0.001,
-    "simplify":0.001,
+    "quantize":0.01,
+    "simplify":0.01,
     "dest":"./topojson/low/",
-    "gridSize": 60,
     "exclude" : [
       "tl_2010"
     ]
   },
-  "medium": {
-    "quantize":0.0001,
-    "simplify":0.0001,
-    "dest":"./topojson/medium/",
-    "gridSize": 5
-  },
   "high": {
     "quantize":0.00001,
     "simplify":0.00001,
-    "dest":"./topojson/high/",
-    "gridSize":0.5
+    "dest":"./build/topojson/high/",
+    "exclude": [
+      "tl_2015",
+      "cb_2015"
+    ]
   }
 }
