somehow broke the cbsa clipping. Turf people need to explain their scoped packages better

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "Voucher/Metro Areas Project",
   "dependencies": {
+    "@turf/flatten": "^5.1.5",
+    "@turf/intersect": "^6.1.2",
     "@turf/truncate": "^6.0.1",
     "comma-number": "^2.0.0",
     "csv-parse": "^1.2.0",
@@ -42,7 +44,6 @@
     "sassr": "^0.1.2",
     "text-encoding": "^0.6.4",
     "topojson": "^3.0.2",
-    "turf": "^3.0.14",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
