--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Voucher/Metro Areas Project",
   "dependencies": {
+    "@turf/area": "^6.0.1",
     "@turf/flatten": "^5.1.5",
     "@turf/intersect": "^6.1.2",
     "@turf/truncate": "^6.0.1",
@@ -17,7 +18,8 @@
     "point-in-polygon": "^1.0.1",
     "promise-polyfill": "^7.1.2",
     "stringify": "^5.1.0",
-    "svg-path-bounds": "^1.0.1"
+    "svg-path-bounds": "^1.0.1",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "brfs": "^1.4.3",
