--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "browserify": "^14.3.0",
     "browserify-css": "^0.10.0",
     "browserify-shim": "^3.8.14",
+    "browserify-zlib": "^0.2.0",
     "deepcopy": "^0.6.3",
     "exposify": "^0.5.0",
     "gulp": "^3.9.1",
