did rounding off pre-build so HUD doesn't get mad, also upgrading all the build tools to use latest node

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fs": "0.0.1-security",
     "geojson-bbox": "0.0.0",
     "jquery": "^1.12.4",
-    "localforage": "^1.7.1",
+    "localforage": "^1.7.2",
     "pako": "^1.0.6",
     "point-in-polygon": "^1.0.1",
     "promise-polyfill": "^7.1.2",
@@ -22,34 +22,34 @@
     "turf": "^3.0.14"
   },
   "devDependencies": {
-    "brfs": "^1.4.3",
-    "browserify": "^14.3.0",
-    "browserify-css": "^0.10.0",
-    "browserify-shim": "^3.8.14",
-    "browserify-zlib": "^0.2.0",
-    "deepcopy": "^0.6.3",
-    "exposify": "^0.5.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-decompress": "^2.0.2",
-    "gulp-git": "^2.5.2",
-    "gulp-notify": "^3.0.0",
-    "gulp-ruby-sass": "^2.1.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2",
-    "gulp-unzip": "^1.0.0",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
-    "martinez-polygon-clipping": "^0.4.1",
-    "ogr2ogr": "^1.2.1",
-    "request": "^2.85.0",
-    "sassr": "^0.1.2",
-    "text-encoding": "^0.6.4",
-    "topojson": "^3.0.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "brfs": "^2.0.0",
+    "browserify": "^16.2.2",
+    "browserify-css": "^0.14.0",
+    "browserify-shim": "*",
+    "browserify-zlib": "*",
+    "deepcopy": "^1.0.0",
+    "exposify": "*",
+    "gulp": "*",
+    "gulp-concat": "*",
+    "gulp-decompress": "*",
+    "gulp-git": "^2.7.0",
+    "gulp-notify": "*",
+    "gulp-ruby-sass": "^3.0.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "*",
+    "gulp-uglify": "^3.0.0",
+    "gulp-unzip": "*",
+    "gulp-util": "*",
+    "gulp-watch": "^5.0.0",
+    "martinez-polygon-clipping": "^0.4.3",
+    "ogr2ogr": "*",
+    "request": "^2.87.0",
+    "sassr": "*",
+    "text-encoding": "*",
+    "topojson": "*",
+    "vinyl-buffer": "*",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "*"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
