--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "@turf/flatten": "^5.1.5",
     "@turf/intersect": "^6.1.2",
     "@turf/truncate": "^6.0.1",
+    "cbpp_colorgen": "github:CenterOnBudget/CBPP_Colorgen",
     "cbpp_figures": "github:CenterOnBudget/CBPP_Figure",
     "comma-number": "^2.0.0",
     "csv-parse": "^1.2.0",
     "d3": "^4.8.0",
     "fs": "0.0.1-security",
     "geojson-bbox": "0.0.0",
-    "cbpp_colorgen": "github:CenterOnBudget/CBPP_Colorgen",
+    "http-parser-js": "^0.5.0",
     "jquery": "^1.12.4",
     "localforage": "^1.7.2",
     "node-php-server": "^0.1.2",
+    "node-phpcgi": "^0.3.7",
     "pako": "^1.0.6",
     "point-in-polygon": "^1.0.1",
     "promise-polyfill": "^7.1.2",
