--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "d3": "^4.8.0",
     "fs": "0.0.1-security",
     "geojson-bbox": "0.0.0",
+    "gulp": "^4.0.2",
     "http-parser-js": "^0.5.0",
     "jquery": "^1.12.4",
     "localforage": "^1.7.2",
