more rearranging of things

--- a/node/package.json
+++ b/node/package.json
@@ -12,6 +12,7 @@
     "comma-number": "^2.0.0",
     "core-js": "^3.22.0",
     "csv-parse": "^1.2.0",
+    "csv-writer": "^1.6.0",
     "d3": "^4.8.0",
     "fs": "0.0.1-security",
     "geojson-bbox": "0.0.0",
@@ -21,10 +22,12 @@
     "localforage": "^1.7.2",
     "node-php-server": "^0.1.2",
     "pako": "^1.0.6",
+    "papaparse": "^5.4.1",
     "path": "^0.12.7",
     "point-in-polygon": "^1.0.1",
     "promise-polyfill": "^7.1.2",
     "regenerator-runtime": "^0.13.9",
+    "seedrandom": "^3.0.5",
     "stringify": "^5.1.0",
     "style-loader": "^3.3.1",
     "svg-path-bounds": "^1.0.1",
