--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         volumes:
             - ./node/prod:/var/www/html/js:rw
             - ./webroot:/var/www/html:rw
+            - ${TILE_DIR}:/var/www/html/image_proxy/cache:rw
         build:
             context: .
             dockerfile: services/apache/Dockerfile
