--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "csv-parse": "^1.2.0",
     "csv-writer": "^1.6.0",
     "d3": "^4.8.0",
+    "distinct-colors": "^3.0.0",
     "fisher-yates": "^1.0.3",
     "fs": "0.0.1-security",
     "geojson-bbox": "^0.0.0",
