use water as clip mask

--- a/node/package.json
+++ b/node/package.json
@@ -4,10 +4,11 @@
   "description": "Voucher/Metro Areas Project",
   "dependencies": {
     "@mapbox/geojson-area": "^0.2.2",
-    "@turf/area": "^6.0.1",
-    "@turf/flatten": "^5.1.5",
-    "@turf/intersect": "^6.1.2",
-    "@turf/truncate": "^6.0.1",
+    "@turf/area": "^6.5.0",
+    "@turf/flatten": "^6.5.0",
+    "@turf/intersect": "^6.5.0",
+    "@turf/truncate": "^6.5.0",
+    "@turf/difference": "^6.5.0",
     "cbpp_colorgen": "git+https://github@github.com:CBPP-Web-Lib/CBPP_Colorgen.git",
     "cbpp_figures": "git+https://github@github.com:CBPP-Web-Lib/CBPP_Figure.git",
     "comma-number": "^2.0.0",
