--- a/node/package.json
+++ b/node/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "@mapbox/geojson-area": "^0.2.2",
     "@turf/area": "^6.5.0",
+    "@turf/difference": "^6.5.0",
     "@turf/flatten": "^6.5.0",
     "@turf/intersect": "^6.5.0",
     "@turf/truncate": "^6.5.0",
-    "@turf/difference": "^6.5.0",
     "cbpp_colorgen": "git+https://github@github.com:CBPP-Web-Lib/CBPP_Colorgen.git",
     "cbpp_figures": "git+https://github@github.com:CBPP-Web-Lib/CBPP_Figure.git",
     "comma-number": "^2.0.0",
     "core-js": "^3.22.0",
     "csv-parse": "^1.2.0",
+    "csv-stream": "^0.2.0",
     "csv-writer": "^1.6.0",
     "d3": "^4.8.0",
     "distinct-colors": "^3.0.0",
@@ -21,8 +22,11 @@
     "fs": "0.0.1-security",
     "geojson-bbox": "^0.0.0",
     "gulp": "^4.0.2",
+    "gunzip-file": "^0.1.1",
     "http-parser-js": "^0.5.0",
     "jquery": "^1.12.4",
+    "jsonparse": "^1.3.1",
+    "JSONStream": "^1.3.5",
     "localforage": "^1.7.2",
     "node-php-server": "^0.1.2",
     "pako": "^1.0.6",
