--- a/node/package.json
+++ b/node/package.json
@@ -23,6 +23,7 @@
     "geojson-bbox": "^0.0.0",
     "gulp": "^4.0.2",
     "gunzip-file": "^0.1.1",
+    "html2canvas": "^1.4.1",
     "http-parser-js": "^0.5.0",
     "jquery": "^1.12.4",
     "jsonparse": "^1.3.1",
